# sololedger

./: .gitignore  .port-registry.json  AUTOMATION.md  Dockerfile.api  Makefile  README.md  categorization_rules.toml  config.toml  deploy.sh  docker-compose.yml  merchant_map.json  progress.md  pyproject.toml  requirements.txt  scorp_app_plan.md  scorp_plan.md  scorp_progress.md  task_plan.md
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: deploy.yml  test.yml
.opencode/: opencode.jsonc
app/: api.py  backup.py  bank_feed.py  categorizer.py  categorizer_embed.py  categorizer_llm.py  config.py  disclaimer.py  expenses.py  importer.py  invoice.py  ledger.py  main.py  marketing.py  mileage.py  notify.py  ofx_import.py  payments.py  payroll.py  provision.py  receipts.py  reconciliation.py  reports.py  rules.py  setup.py  taxes.py  time_tracking.py
app/api/: __init__.py  accounts.py  attention.py  auth.py  banking.py  deps.py  expenses.py  health.py  invoices.py  mileage.py  notifications.py  onboarding.py  payroll.py  receipts.py  reconciliation.py  (+7 more)
deploy/: .env.example  Caddyfile  DEPLOY.md  docker-compose.yml  ferrum-cleanup.sh  health-check.sh
docs/: SECURITY.md
ledger/: accounts.beancount  main.beancount  transactions.beancount
marketing/: CHANGELOG.md  blog-post.md  generated.txt  social-posts.md
scripts/: generate_rules_toml.py
templates/: invoice.html  voucher.html
tests/: conftest.py  test_cli.py  test_config.py  test_invoice.py  test_ledger.py  test_payments.py  test_payroll.py  test_taxes.py
web/: index.html  manifest.json
(+36 files in other folders)
