[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sololedger"
version = "0.2.0"
description = "Open-source accounting, invoicing, and tax tools for your consulting LLC"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Dillon", email = "dilljens@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Accounting",
]

dependencies = [
    "beancount>=3,<4",
    "click>=8",
    "jinja2>=3",
    "tomli>=2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "stripe>=15",
    "plaid-python>=40",
    "pdfplumber>=0.11",
    "Pillow>=10",
    "requests>=2",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60"]
ocr = ["pytesseract>=0.3"]
notify = ["plyer>=2.1"]
api = ["python-multipart>=0.0.9", "pydantic>=2"]
all = [
    "weasyprint>=60",
    "pytesseract>=0.3",
    "plyer>=2.1",
    "python-multipart>=0.0.9",
    "pydantic>=2",
]

[project.scripts]
llc = "app.main:cli"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.urls]
Homepage = "https://sololedger.app"
Source = "https://github.com/dilljens/sololedger"
